Improve Examine Asset overflow, sizing and other small issues on web and mobile

--- a/styles/_asset-details.scss
+++ b/styles/_asset-details.scss
@@ -1,5 +1,6 @@
 .asset-details {
     width: 100%;
+    overflow: auto;
 
     h5 {
         margin: 0.75rem 0.5rem 0.25rem;
