--- a/styles/_digit-stats.scss
+++ b/styles/_digit-stats.scss
@@ -1,6 +1,7 @@
 .digit-stats-card {
     width: 100%;
     max-height: 100%;
+    overflow: auto;
     padding: 0.25rem;
 }
 
